tests/transpiler/x/hs/substring_builtin.hs
-- Generated by Mochi transpiler v0.10.31 on 2025-07-19 18:35:02 GMT+7
main :: IO ()
main = do
    print (substring "mochi" 1 4)
